# tconnect

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md  http_get_post.c  https_get.c  tls_raw.c  udp_dns_query.c  ws_echo.c  wss_echo.c
include/tconnect/: async.h  connection.h  http.h  transport.h  url.h
sandbox/: CMakeLists.txt  main.c
scripts/: ws_test_server.py
src/: async.c  transport_http.c  transport_tcp.c  transport_tls.c  transport_udp.c  transport_ws.c  url.c
tests/: CMakeLists.txt  test_transport.c
